--- a/css/styles.css
+++ b/css/styles.css
@@ -3358,6 +3358,19 @@ input::-moz-focus-inner {
 /* ------------------------------------------------------------------- 
  * ## header contact button
  * ------------------------------------------------------------------- */
+.s-hero__content-about .btn {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  gap: 2rem;
+  width: 35rem;
+}
 .s-header__content .btn {
   --btn-height: calc(var(--vspace-btn) - 1.2rem);
 
@@ -3568,9 +3581,9 @@ input::-moz-focus-inner {
 .s-hero {
   background-color: #121417;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  max-width: auto;
   min-height: calc(25.5 * var(--space));
-  overflow: hidden;
   position: relative;
 }
 
@@ -3620,7 +3633,7 @@ input::-moz-focus-inner {
   -webkit-box-align: end;
   align-items: flex-end;
   padding-top: 20vh;
-  padding-bottom: 7vh;
+  padding-bottom: 3vh;
   position: relative;
 }
 
@@ -3653,11 +3666,13 @@ input::-moz-focus-inner {
 .s-hero__content-about {
   font-family: var(--font-2);
   font-weight: 400;
-  font-size: 3.6rem;
+  font-size: 3.4rem;
   line-height: 1.444;
   color: var(--color-white);
   padding-left: 3.6em;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .s-hero__content-about::before {
