fix: mobile responsivity

--- a/css/styles.css
+++ b/css/styles.css
@@ -3371,6 +3371,7 @@ input[type='button'] {
   justify-content: center;
   gap: 2rem;
   width: auto;
+  max-width: 35rem;
   height: auto;
   padding: 0;
 }
