--- a/css/styles.css
+++ b/css/styles.css
@@ -3364,6 +3364,7 @@ button,
 input[type='submit'],
 input[type='reset'],
 input[type='button'] {
+  border-radius: 2rem;
   letter-spacing: 0;
 }
 .s-hero__content-about .btn {
@@ -3377,7 +3378,7 @@ input[type='button'] {
 }
 .s-header__content .btn {
   --btn-height: calc(var(--vspace-btn) - 1.2rem);
-
+  border-radius: 2rem;
   font-size: 1rem;
   padding: 0 2.8rem;
   margin: 0;
