--- a/css/styles.css
+++ b/css/styles.css
@@ -3787,6 +3787,7 @@ input[type='button'] {
   vertical-align: middle;
   color: var(--color-text);
   position: relative;
+  margin-top: -60px;
 }
 
 .s-hero__scroll-link:hover,
@@ -4085,7 +4086,6 @@ html.no-csstransitions .s-hero__content {
   }
   .s-hero__content-about {
     font-size: 2.2rem;
-    padding-right: 6rem;
   }
   .s-hero__video {
     right: auto;
